--- a/src/scss/_intro_section/_intro_content.scss
+++ b/src/scss/_intro_section/_intro_content.scss
@@ -2,6 +2,10 @@
     padding-top: 144px;
     text-align: center;
     
+    @media screen and (max-width: 1280px) {
+        padding-top: 44px;
+    }
+
     .intro__course {
         width: 64px;
         height: 64px;
