--- a/src/scss/_intro_section/_intro_content.scss
+++ b/src/scss/_intro_section/_intro_content.scss
@@ -21,6 +21,11 @@
         text-align: center;
         font-weight: normal;
 
+        @media screen and (max-width: 768px) {
+            font-size: 30px;
+            line-height: 40px;
+        }
+
         &_inner {
             font-family: 'Solomon Sans Bold';
         }
@@ -66,20 +71,46 @@
         margin: 60px auto;
         border-top: 1px;
         border-color: rgba(255, 255, 255, .5);
+
+        @media screen and (max-width: 768px) {
+            margin: 30px auto;
+        }
     }
 
     .intro__info {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 22px;
-        margin-bottom: 20px;
+        max-width: 540px;
+        margin: 0 auto 20px;
+        min-height: 22px;
+
+        @media screen and (max-width: 768px) {
+            flex-wrap: wrap;
+        }
+
+        @media screen and(max-width: 415px) {
+            justify-content: space-around;
+        }
 
         &_item {
             display: flex;
             align-items: center;
             margin-right: 30px;
+            margin-bottom: 15px;
             font-size: 18px;
+            white-space: nowrap;
+
+            @media screen and (max-width: 768px) {
+                margin-right: 15px;
+                margin-left: 15px;
+                font-size: 16px;
+            }
+
+            @media screen and(max-width: 415px) {
+                margin-left: 0;
+                margin-right: 0;
+            }
 
             &:last-child {
                 margin-right: 0;
@@ -100,6 +131,7 @@
             .intro__info_item {
                 margin-right: 15px;
                 font-size: 16px;
+                white-space: pre;
 
                 &:last-child {
                     margin-right: 0;
@@ -112,6 +144,10 @@
                     height: 8px;
                     background: rgba(255, 255, 255, 0.3);
                     border-radius: 50%;
+
+                    @media screen and (max-width: 768px) {
+                        display: none;
+                    }
                 }
             }
         }
