--- a/src/scss/_intro_section/_section_intro.scss
+++ b/src/scss/_intro_section/_section_intro.scss
@@ -15,6 +15,7 @@
 
     @media screen and (max-width: 768px) {
         background-position: top left -340px;
+        height: 651px;
     }
 
     @media screen and (max-width: 375px) {
