--- a/src/scss/_intro_section/_top-bar.scss
+++ b/src/scss/_intro_section/_top-bar.scss
@@ -73,10 +73,14 @@
         align-items: center;
 
         &__item {
+            display: flex;
+            align-items: center;
+            justify-content: center;
             width: 40px;
             height: 22px;
             margin-right: 2px;
             border-radius: 6px;
+            font-size: 12px;
             text-align: center;
 
             &:last-child {
