--- a/src/scss/_intro_section/_intro_section.scss
+++ b/src/scss/_intro_section/_intro_section.scss
@@ -14,6 +14,7 @@
     }
 
     @media screen and (max-width: 768px) {
+        position: relative;
         background-position: top left -340px;
         height: 651px;
     }
