--- a/src/scss/_info_section.scss
+++ b/src/scss/_info_section.scss
@@ -29,7 +29,7 @@
         position: relative;
         left: -30px;
         width: calc(100% + 60px);
-        height: 216px;
+        min-height: 216px;
         margin-bottom: 60px;
         padding: 30px;
         background-color: $_light-green;
