--- a/src/scss/_intro_section/_top-bar.scss
+++ b/src/scss/_intro_section/_top-bar.scss
@@ -3,6 +3,10 @@
     background: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(30px);
 
+    @media screen and (max-width: 768px) {
+        display: none;
+    }
+
     &_inner {
         display: flex;
     }
@@ -73,22 +77,36 @@
         align-items: center;
 
         &__item {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            position: relative;
             width: 40px;
             height: 22px;
             margin-right: 2px;
-            border-radius: 6px;
-            font-size: 12px;
-            text-align: center;
+            cursor: pointer;
+
+            input {
+                visibility: hidden;
+                width: 0;
+                height: 0;
+            }
+
+            span {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                border-radius: 6px;
+                font-size: 12px;
+            }
+
+            input:checked + span {
+                background: rgba(255, 255, 255, 0.25);
+            }
 
             &:last-child {
                 margin-right: 0;
-            }
-
-            &_active {
-                background-color: rgba(255, 255, 255, 0.25);
             }
         }
     }
