--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,3 @@
-$sm: 375px;
-$md: 768px;
-$lg: 1024px;
-$xl: 1280px;
-
 $_yellow: #FED530;
 $_green: #4ED401;
 $_light-green: #F0FEE1;
@@ -37,6 +32,7 @@ $_dark-grey: #8D949E;
 }
 
 body {
+    overflow-x: hidden;
     box-sizing: border-box;
     font-family: 'Solomon Sans Normal';
 }
@@ -49,6 +45,11 @@ a {
     text-decoration: none;
 }
 
+button {
+    cursor: pointer;
+    font-family: 'Solomon Sans Normal';
+}
+
 .container {
     box-sizing: border-box;
     margin: 0 auto;
@@ -58,7 +59,7 @@ a {
 }
 
 .button__green {
-    height: 38px;
+    min-height: 38px;
     padding: 10px 25px;
     font-family: 'Solomon Sans Semibold';
     font-size: 16px;
@@ -74,7 +75,7 @@ a {
         color: $_green;
     }
 }
-
 @import './_intro_section/_intro_section';
+@import './_mobile_menu';
 @import './_info_section';
 @import './_footer';
