--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,6 +1,7 @@
 .teacher {
     min-height: 682px;
     padding-top: 60px;
+    padding-bottom: 30px;
     background-color: $_light-grey;
 
     &__heading {
