--- a/src/scss/_mobile_menu.scss
+++ b/src/scss/_mobile_menu.scss
@@ -34,7 +34,6 @@
     }
 
     @media screen and (max-width: 768px) {
-        // display: block;
         right: -400px;
     }
 
@@ -91,13 +90,19 @@
         }
 
         &__item {
+            display: block;
+            padding: 0;
+            background: none;
             font-size: 16px;
             color: $_dark-blue;
-            padding: 0;
             text-align: right;
 
             &:hover {
                 color: $_green;
+            }
+
+            @media screen and (max-width: 375px) {
+                margin-left: auto;
             }
         }
 
